--- a/app/src/main/res/layout/sublist_articulos.xml
+++ b/app/src/main/res/layout/sublist_articulos.xml
@@ -18,7 +18,7 @@
                 android:src="@drawable/documento"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/img_sub_item"
                 android:padding="12dp"
                 android:orientation="vertical"
@@ -28,14 +28,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Sub item title"/>
+                    android:text="Sub item title"
+                    android:justificationMode="inter_word"/>
+                <TextView
+                    android:id="@+id/tv_sub_item_fecha"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description goes here..."
+                    android:justificationMode="inter_word"/>
                 <TextView
                     android:id="@+id/tv_sub_item_resumen"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Description goes here..."
-                    android:singleLine="true"
-                    />
+                    android:justificationMode="inter_word"/>
+                <TextView
+                    android:id="@+id/tv_sub_item_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description goes here..."
+                    android:justificationMode="inter_word"/>
             </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
